# rust-card10

./: .gitignore  .gitlab-ci.yml  .gitmodules  0001-feat-nix-add-jailbreak-arg.patch  Cargo.toml  README.md  default.nix  openocd.gdb  openocd.nix  python-crc16.nix  release.nix  shell.nix
.bin/: cargo-card10
.cargo/: config
card10/: Cargo.toml  build.rs  memory.x
card10-alloc/: Cargo.toml
card10-alloc/src/: lib.rs
card10-l0dable/: Cargo.toml
card10-l0dable/src/: bhi160.rs  bme680.rs  buttons.rs  display.rs  fmt_buffer.rs  fs.rs  leds.rs  lib.rs  light_sensor.rs  os.rs  rtc.rs  trng.rs  uart.rs  vibra.rs
card10-l0dable/src/framebuffer/: mod.rs  text.rs
card10-sys/: Cargo.toml  build.rs
card10-sys/src/: lib.rs
card10/src/: lcd.rs  leds.rs  lib.rs
draw-image/: Cargo.toml  README.md
draw-image/src/: applewatch-160x80.raw  main.rs
example/: Cargo.toml
example/.cargo/: config
example/src/: main.rs
l0dable/: Cargo.toml  build.rs  l0dable.ld
l0dable/src/: bhi160.rs  bme680.rs  buttons.rs  client.c  display.rs  fmt_buffer.rs  fs.rs  lib.rs  light_sensor.rs  os.rs  rtc.rs  trng.rs  uart.rs  utime.rs  vibra.rs
l0dable/src/framebuffer/: font.rs  mod.rs  text.rs
max32665/: Cargo.toml  device.x
rkanoid/: Cargo.toml
rkanoid/.cargo/: config
rkanoid/src/: main.rs
watchapp/: Cargo.toml
watchapp/src/: main.rs
