[workspace]
members = [
  "card10-sys",
  "card10-alloc",
  "card10-l0dable",
  "example",
  "rkanoid",
  "draw-image",
]

default-members = [
  "example",
  "rkanoid",
  "draw-image",
]

[profile.release]
codegen-units = 1
incremental = false
debug = true
opt-level = "s"
lto = true
panic = "abort"
