[package]

name = "card10-alloc"
version = "0.1.0"
authors = ["Astro <astro@spaceboyz.net>"]
license = "MIT/Apache-2.0"
edition = "2018"

description = "Dynamic memory allocation for card10 l0dables"
repository = "https://git.card10.badge.events.ccc.de/astro/rust-card10"
homepage = "https://git.card10.badge.events.ccc.de/astro/rust-card10"

categories = ["no-std", "memory-management"]
keywords = [
    "CCC",
    "CCCamp2019",
    "CCCamp19",
    "card10",
    "l0dable",
]

[dependencies]
alloc-cortex-m = "0.3"
card10-sys = { path = "../card10-sys" }
