[package]
edition = "2018"
name = "card10-l0dable"
version = "0.2.0"
authors = [
    "Astro <astro@spaceboyz.net>",
    "Kloenk <me@kloenk.de>",
    "Bruno Kirschner <bruno.kirschner@online.de>",
    "Puzzlewolf <camp@nora.pink>",
    "Raphael Nestler <raphael.nestler@gmail.com>",
    "Danilo Bargen <mail@dbrgn.ch>",
    "toon <toon@c3d2.de>",
    "Sergey Pepyakin <sergei@parity.io>",

]
license = "MIT/Apache-2.0"
repository = "https://git.card10.badge.events.ccc.de/astro/rust-card10"
homepage = "https://git.card10.badge.events.ccc.de/astro/rust-card10"
keywords = [
    "CCC",
    "CCCamp2019",
    "CCCamp19",
    "card10",
    "l0dable",
]
categories = ["no-std"]
description = "make l0dables for the Card10 (CCCamp 2019) badge"

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabi"

[dependencies]
card10-sys = { path = "../card10-sys" }
embedded-graphics = "0.5"
