[package]

name = "card10-sys"
version = "0.1.0"
authors = ["Astro <astro@spaceboyz.net>", "Kloenk <me@kloenk.de>"]
license = "MIT/Apache-2.0"
edition = "2018"

description = "Unsafe C bindings for card10 l0dables"
repository = "https://git.card10.badge.events.ccc.de/astro/rust-card10"
homepage = "https://git.card10.badge.events.ccc.de/astro/rust-card10"

categories = ["external-ffi-bindings", "no-std"]
keywords = [
    "CCC",
    "CCCamp2019",
    "CCCamp19",
    "card10",
    "l0dable",
]

[dependencies]
panic-abort = "^0.3"
r0 = "^0.2"

[build-dependencies]
bindgen = "^0.51"
cc = "^1.0"
